PharmaDemo/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Target__c</fullName>
        <formula>CASE(Account.Target__c, 
&quot;High&quot;, &quot;High&quot;, 
&quot;Medium&quot;, &quot;Medium&quot;, 
&quot;Low&quot;, &quot;Low&quot;,&quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advocacy_Ladder__c</fullName>
        <label>Advocacy Ladder</label>
        <picklist>
            <picklistValues>
                <fullName>KOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Advocacy__c</fullName>
        <description>Level of advocacy of this person: relationship times influence. Relationship x Influence = Advocacy. Relationship scores = (-2 to +2). Influence (0 to 3). Result/2 = # of arrows.</description>
        <formula>CASE ( 

VALUE(CASE( Relationship__c , &quot;Excellent&quot;, &quot;2&quot;, &quot;Good&quot;, &quot;1&quot;, &quot;Neutral&quot;, &quot;0&quot;, &quot;Poor&quot;, &quot;-1&quot;, &quot;Hostile&quot;, &quot;-2&quot;, &quot;0&quot;) ) 

* 

VALUE (CASE(  Influence__c , &quot;Strong&quot;, &quot;3&quot;, &quot;Moderate&quot;, &quot;2&quot;, &quot;Weak&quot;, &quot;1&quot;, &quot;0&quot;) ) 

,

6, IMAGE(&quot;/servlet/servlet.FileDownload?file= 015j0000000e7fN&quot;,&quot;3 Up Arrows&quot;) , 
4, IMAGE(&quot;/servlet/servlet.FileDownload?file= 015j0000000e7fO&quot;,&quot;2 Up Arrows&quot;) ,
3, IMAGE(&quot;/servlet/servlet.FileDownload?file= 015j0000000e7fO&quot;,&quot;2 Up Arrows&quot;) ,
2, IMAGE(&quot;/servlet/servlet.FileDownload?file= 015j0000000e7fP&quot;,&quot;1 Up Arrow&quot;) ,
1, IMAGE(&quot;/servlet/servlet.FileDownload?file= 015j0000000e7fP&quot;,&quot;1 Up Arrow&quot;) ,
0, IMAGE(&quot;/servlet/servlet.FileDownload?file= 015j0000000e7fQ&quot;,&quot;Neutral Arrow&quot;) ,
-1, IMAGE(&quot;/servlet/servlet.FileDownload?file= 015j0000000e7fR&quot;,&quot;1 Down Arrow&quot;) ,
-2, IMAGE(&quot;/servlet/servlet.FileDownload?file= 015j0000000e7fR&quot;,&quot;1 Down Arrow&quot;) ,
-3, IMAGE(&quot;/servlet/servlet.FileDownload?file= 015j0000000e7fS&quot;,&quot;2 Down Arrows&quot;) ,
-4, IMAGE(&quot;/servlet/servlet.FileDownload?file= 015j0000000e7fS&quot;,&quot;2 Down Arrows&quot;) ,
-6, IMAGE(&quot;/servlet/servlet.FileDownload?file= 015j0000000e7fT&quot;,&quot;3 Down Arrows&quot;) ,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015j0000000e7fQ&quot;,&quot;Neutral Arrow&quot;)

)</formula>
        <inlineHelpText>Visual scoring of the advocacy level of this person.</inlineHelpText>
        <label>Advocacy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Sample_Allocation__c</fullName>
        <label>Annual Sample Allocation</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appointments__c</fullName>
        <label>Appointments</label>
        <summaryFilterItems>
            <field>Call_Attendees__c.Type__c</field>
            <operation>equals</operation>
            <value>Appointment</value>
        </summaryFilterItems>
        <summaryForeignKey>Call_Attendees__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Appt__c</fullName>
        <formula>HYPERLINK(IF($Profile.Name &lt;&gt; &quot;Standard User - Developing Market&quot;,&quot;apex/callreport?type=Appointment&amp;contactid=&quot; &amp; Id &amp;&quot;&amp;accountid=&quot;&amp; Account.Id , &quot;/00U/e?who_id= &quot; &amp; Id &amp; &quot; &amp;retURL=%2F&quot; &amp; Id &amp; &quot;&amp;what_id= &quot; &amp; AccountId &amp; &quot;&amp;RecordType=012j0000000bXwlAAY&quot;),IMAGE(&quot;/img/icon/alarmClock16.gif&quot;,&quot;Create Contact Appointment&quot;),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Time__c</fullName>
        <label>Best Time</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Buying_Behaviour__c</fullName>
        <label>Buying Behaviour</label>
        <picklist>
            <picklistValues>
                <fullName>Efficacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Sensitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Indicator__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?cht=gom&amp;chs=45x30&amp;chf=bg,s,FFFFFF&amp;chd=t:&quot; &amp; TEXT(pc_Target_Calls__c ),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <label>Call Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call__c</fullName>
        <formula>HYPERLINK(IF($Profile.Name &lt;&gt; &quot;Standard User - Developing Market&quot;,&quot;apex/callreport?type=1:1&amp;contactid=&quot; &amp; Id &amp;&quot;&amp;accountid=&quot;&amp; Account.Id , &quot;/00U/e?who_id= &quot; &amp; Id &amp; &quot; &amp;retURL=%2F&quot; &amp; Id &amp; &quot;&amp;what_id= &quot; &amp; AccountId &amp; &quot;&amp;RecordType=012j0000000bXwkAAI&quot;),IMAGE(&quot;/img/icon/cellPhone16.gif&quot;,&quot;Create Contact Call Report&quot;),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calls__c</fullName>
        <label>Calls</label>
        <summaryFilterItems>
            <field>Call_Attendees__c.Type__c</field>
            <operation>equals</operation>
            <value>Meeting, Face to Face, 1:1</value>
        </summaryFilterItems>
        <summaryForeignKey>Call_Attendees__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Calls_this_Year__c</fullName>
        <label>Calls this Year</label>
        <summaryFilterItems>
            <field>Call_Attendees__c.Type__c</field>
            <operation>equals</operation>
            <value>1:1, Meeting</value>
        </summaryFilterItems>
        <summaryForeignKey>Call_Attendees__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cardiac_Network__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cardiac Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disease_Interest__c</fullName>
        <label>Disease Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Cardio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EnT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Early_Adopter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the doctor an early adopter</inlineHelpText>
        <label>Early Adopter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Find_Nearby__c</fullName>
        <formula>IF( ISPICKVAL( FN__Mapping_Status__c , &apos;Located&apos;), HYPERLINK( &quot;apex/FN__FindNearbymap?cid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) , HYPERLINK( &quot;apex/FN__CGeoCode?id=&quot; &amp; Id,&quot;Locate Contact&quot;,&quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Find Nearby</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Lat__c</fullName>
        <label>Contact Lat</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Lon__c</fullName>
        <label>Contact Lon</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Address__c</fullName>
        <inlineHelpText>Contact&apos;s Mapping Address</inlineHelpText>
        <label>Contact Mapping Address</label>
        <picklist>
            <picklistValues>
                <fullName>Mailing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Map</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Status__c</fullName>
        <inlineHelpText>Contact&apos;s Mapping Status.</inlineHelpText>
        <label>Contact Mapping Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Located Yet</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Located</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem with Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Google Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Exhausted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_Name_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id , FirstName &amp; &quot; &quot; &amp;  LastName,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FullName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp;  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Activity_Planned__c</fullName>
        <formula>IF( ISNULL( Next_Appointment__c ),&quot;No&quot;, IF(TODAY()- Next_Appointment__c &gt;0,&quot;No&quot;, &quot;Yes&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future Activity Planned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Golfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Golfer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical Assistant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ITBrelViz__Hover_Details__c</fullName>
        <formula>&quot;Account Name: &quot; &amp; Account.Name &amp; &quot;\nDepartment: &quot; &amp; Department &amp; &quot;\nTitle: &quot; &amp; Title &amp; &quot;\nPhone: &quot; &amp; Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hover Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Influence_Icon__c</fullName>
        <description>3 star rating based on influence.</description>
        <formula>CASE( Influence__c , 
&quot;Strong&quot;,  IMAGE(&quot;/servlet/servlet.FileDownload?file= 015j0000000e7fU&quot;, &quot;3 Stars&quot;) , 
&quot;Moderate&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file= 015j0000000e7fV&quot;, &quot;2 Stars&quot;) , 
&quot;Weak&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file= 015j0000000e7fW&quot;, &quot;1 Star&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file= 015j0000000e7fX&quot;, &quot;0 Stars&quot;))</formula>
        <label>Influence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influence__c</fullName>
        <description>Level of influence on our product usage</description>
        <inlineHelpText>This person&apos;s level of influence on our product usage</inlineHelpText>
        <label>Influence</label>
        <picklist>
            <picklistValues>
                <fullName>Strong</fullName>
                <color>#CC0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Weak</fullName>
                <color>#FFCC66</color>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <color>#AFCADF</color>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KOL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KOL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <label>Last Activity</label>
        <summarizedField>Call_Attendees__c.Call_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Call_Attendees__c.Type__c</field>
            <operation>equals</operation>
            <value>1:1, Meeting</value>
        </summaryFilterItems>
        <summaryForeignKey>Call_Attendees__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Level_of_Influence__c</fullName>
        <label>Level of Influence</label>
        <picklist>
            <controllingField>Advocacy_Ladder__c</controllingField>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Champion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Interest__c</fullName>
        <label>Medical Interest</label>
        <picklist>
            <picklistValues>
                <fullName>2001 - Immunology &amp; Allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012 - Infectious Diseases, Tropical Diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2071 - Minor Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019 - Paediatric Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018 - Paediatrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2090 - Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2034 - Venerology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2070 - Well Woman&apos;s Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1001 - Allergy Clinic(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1006 - Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1050 - GUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1018 - Paediatric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1100 - Eczema Clinic(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1101 - Acne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1102 - Chief</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1103 - Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1104 - Drug Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3001 - Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3002 - Specialist Registrar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3003 - Registrar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3004 - Clinical Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3005 - Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3007 - Associate Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3008 - Action On Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3009 - Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3010 - Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3011 - Paediatric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3012 - District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3013 - Educational Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3014 - Hospital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Qualifications__c</fullName>
        <label>Medical Qualifications</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_School__c</fullName>
        <label>Medical School</label>
        <picklist>
            <picklistValues>
                <fullName>Bristol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glasgow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nottingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southampton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCL</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month_Number__c</fullName>
        <formula>MONTH(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp;  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Patients_month__c</fullName>
        <label>New Patients/Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Appointment__c</fullName>
        <label>Next Appointment</label>
        <summarizedField>Call_Attendees__c.Call_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Call_Attendees__c.Type__c</field>
            <operation>equals</operation>
            <value>Appointment</value>
        </summaryFilterItems>
        <summaryForeignKey>Call_Attendees__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Next_Call_Objective__c</fullName>
        <label>Next Call Objective</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <label>OldId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patients_Month__c</fullName>
        <label>Patients/Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prescriber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prescribing_Influences__c</fullName>
        <label>Prescribing Influences</label>
        <picklist>
            <picklistValues>
                <fullName>Cost of Drug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age of Drug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speed of Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Availability</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Primary_Brick_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Account.Brick__r.Id ,  Account.Brick__r.Name ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Brick</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Brick_Name__c</fullName>
        <formula>Account.Brick__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Brick Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registrar?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>Relationship</description>
        <inlineHelpText>The overall status of our company&apos;s relationship with this person</inlineHelpText>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hostile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None yet</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saktrin_Sample_Cost__c</fullName>
        <label>Saktrin Sample Cost</label>
        <summarizedField>Sample_Item__c.Total_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Sample_Item__c.Sample__c</field>
            <operation>startsWith</operation>
            <value>a0ej0000000dwfT</value>
        </summaryFilterItems>
        <summaryForeignKey>Sample_Item__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Saktrin_Samples__c</fullName>
        <label>Saktrin Samples</label>
        <summarizedField>Sample_Item__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Sample_Item__c.Sample__c</field>
            <operation>startsWith</operation>
            <value>a0ej0000000dwfT</value>
        </summaryFilterItems>
        <summaryForeignKey>Sample_Item__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Saledrin_Sample_Cost__c</fullName>
        <label>Saledrin Sample Cost</label>
        <summarizedField>Sample_Item__c.Total_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Sample_Item__c.Sample__c</field>
            <operation>startsWith</operation>
            <value>a0ej0000000dwfS</value>
        </summaryFilterItems>
        <summaryForeignKey>Sample_Item__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Saledrin_Samples__c</fullName>
        <label>Saledrin Samples</label>
        <summarizedField>Sample_Item__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Sample_Item__c.Sample__c</field>
            <operation>startsWith</operation>
            <value>a0ej0000000dwfS</value>
        </summaryFilterItems>
        <summaryForeignKey>Sample_Item__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Saloxid_Sample_Cost__c</fullName>
        <label>Saloxid Sample Cost</label>
        <summarizedField>Sample_Item__c.Total_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Sample_Item__c.Sample__c</field>
            <operation>startsWith</operation>
            <value>a0ej0000000dwfR</value>
        </summaryFilterItems>
        <summaryForeignKey>Sample_Item__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Saloxid_Samples__c</fullName>
        <label>Saloxid Samples</label>
        <summarizedField>Sample_Item__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Sample_Item__c.Sample__c</field>
            <operation>startsWith</operation>
            <value>a0ej0000000dwfR</value>
        </summaryFilterItems>
        <summaryForeignKey>Sample_Item__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sample_Allocation_Indicator__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?cht=gom&amp;chs=45x30&amp;chf=bg,s,FFFFFF&amp;chd=t:&quot; &amp; TEXT(Sample_Allocation_Used__c  ),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Allocation Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Allocation_Used__c</fullName>
        <formula>IF (Annual_Sample_Allocation__c   &gt; 0, ROUND( (  Sample_Left__c  /  Annual_Sample_Allocation__c  ) * 100, 0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Sample Allocation Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Left__c</fullName>
        <label>Sample Left</label>
        <summarizedField>Sample_Item__c.Quantity__c</summarizedField>
        <summaryForeignKey>Sample_Item__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sample_Spend_Allowance__c</fullName>
        <label>Sample Spend Allowance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sample_Spend_Indicator__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?cht=gom&amp;chs=45x30&amp;chf=bg,s,FFFFFF&amp;chd=t:&quot; &amp; TEXT( pc_Sample_Spend__c ),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Spend Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Spend__c</fullName>
        <label>Sample Spend</label>
        <summarizedField>Sample_Item__c.Total_Cost__c</summarizedField>
        <summaryForeignKey>Sample_Item__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Spec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specialty</label>
        <referenceTo>Speciality__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Calls__c</fullName>
        <formula>IF(ISPICKVAL(Target__c, &quot;High&quot;),24,
IF(ISPICKVAL(Target__c, &quot;Medium&quot;),12, 
IF(ISPICKVAL(Target__c, &quot;Low&quot;),8, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <color>#78C953</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
                <color>#E27001</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Spend__c</fullName>
        <label>Total Spend</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>University_Studied__c</fullName>
        <inlineHelpText>Where they studied</inlineHelpText>
        <label>University Studied</label>
        <picklist>
            <picklistValues>
                <fullName>Southampton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oxford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambridge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <label>University</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wherevantage__WhereVantage_Geocoding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to the address match details for this record</description>
        <inlineHelpText>Links to the address match details for this record</inlineHelpText>
        <label>WhereVantage Geocoding</label>
        <referenceTo>Wherevantage__WVGeocoding__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pc_Sample_Spend__c</fullName>
        <formula>IF ( Sample_Spend_Allowance__c    &gt; 0, ROUND( (  Sample_Spend__c  /  Sample_Spend_Allowance__c   ) * 100, 0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Sample Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pc_Target_Calls__c</fullName>
        <formula>IF (Target_Calls__c &gt; 0, ROUND( (Calls_this_Year__c  / Target_Calls__c) * 100, 0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Target Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>